# pyciv

./: .gitignore  README.md  index-game.rst  pyproject.toml  requirements.txt  setup.py  test.py
freeciv/: buildings.py  cities.py  effects.py  game.py  governments.py  rules.py  rulesett.py  science.py  tileset.py  units.py
freeciv/ruleset/: __init__.py  doc.py
freeciv/secfile/: __init__.py  lexer.py  loader.py  parser.py
freeciv/templates/: advance.html  building.html  building_index.html  effects_index.html  index.html  tech_index.html  unit_class.html  unit_class_index.html  unit_index.html  unit_type.html
sphinx_fc21_manuals/: README.md  conf.ini  conf.py  notes.txt  setup.py  sphinx_fc21_manuals.py
sphinx_fc21_manuals/docs/: index.md
sphinx_fc21_manuals/templates/: advance-index.rst  advance.rst  borders.rst  building-index.rst  building.rst  calendar.rst  city.rst  culture.rst  description.rst  game-parms.rst  government-index.rst  government.rst  incite-cost.rst  index-game.rst  index.rst  plague.rst  research.rst  unit-class-index.rst  unit-class.rst  unit-index.rst  unit-rules.rst  unit-type-index.rst  unit-type.rst
tests/: test_lexer.py  test_parser.py
